Fix a bug in GRID version with jumping behavior of the first cell

--- a/gridVersion/styles/style.scss
+++ b/gridVersion/styles/style.scss
@@ -34,6 +34,7 @@
             display: none;
          }
          .weather-widget__icon_hide {   
+            max-width: 100%;
             img {
                margin: auto;
                max-width: 100%;
